frontend/src/App.css
/***** nav-bar *****/
body {
  overflow-x: hidden;
}
.nav-bar {
  display: flex;
  justify-content: space-between;
  padding-right: 2em;
  font-size: 18px;
  width: 100%;
}

.menu li:hover {
  text-decoration: underline;
}

.nav-bar h1 {
  padding-left: 1em;
  color: black;
  font-size: 42px;
  font-family: "Zen Loop", cursive;
  display: flex;
}
.logo {
  width: 200px;
}
.nav-bar ul {
  list-style-type: none;
  display: flex;
  flex-wrap: wrap;
}

.nav-bar li {
  color: black;
  padding: 15px;
  display: flex;
  align-content: flex-end;
  flex-wrap: wrap;
  font-family: "Zen Loop", cursive;
  font-size: 28px;
  font-weight: 600;
}

.menu {
  display: flex;
  flex-direction: row;
  list-style: none;
  justify-content: flex-end;
  font-size: 22px;
  margin-bottom: 0;
}

.menu .link {
  text-decoration: none;
  padding: 10px;
  display: flex;
  align-content: flex-end;
  color: black;
  padding-right: 30px;
}

.menu .link:hover {
  color: black;
}
.input-hidden {
  display: none;
}

/* HAMBURGER MENU */
@media screen and (max-width: 787px) {
  .link {
    text-decoration: none !important;
    transition: color 0.3s ease;
  }
  .menuToggle {
    display: block;
    position: absolute;
    top: 35px;
    right: 50px;
    z-index: 2;
    -webkit-user-select: none;
    user-select: none;
  }
  .menuToggle .input-hidden {
    display: block;
    width: 40px;
    height: 32px;
    position: absolute;
    top: -7px;
    left: -5px;
    cursor: pointer;
    opacity: 0;
    z-index: 2;
    -webkit-touch-callout: none;
  }

  .menuToggle span {
    display: block;
    width: 33px;
    height: 4px;
    margin-bottom: 5px;
    position: relative;
    background: black;
    border-radius: 3px;
    z-index: 1;
    transform-origin: 4px 0px;
    transition: transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1),
      background 0.5s cubic-bezier(0.77, 0.2, 0.05, 1), opacity 0.55s ease;
  }

  .menuToggle span:first-child {
    transform-origin: 0% 0%;
  }

  .menuToggle span:nth-last-child(2) {
    transform-origin: 0% 100%;
  }

  .menuToggle .input-hidden:checked ~ span {
    opacity: 1;
    transform: rotate(45deg) translate(-2px, -1px);
    background: #232323;
  }

  .menuToggle .input-hidden:checked ~ span:nth-last-child(3) {
    opacity: 0;
    transform: rotate(0deg) scale(0.2, 0.2);
  }

  .menuToggle .input-hidden:checked ~ span:nth-last-child(2) {
    opacity: 1;
    transform: rotate(-45deg) translate(0, -1px);
  }

  .menu {
    position: absolute;
    width: 200px;
    margin: -100px 0 0 0;
    padding: 50px;
    padding-top: 125px;
    right: -100px;
    background: white;
    -webkit-font-smoothing: antialiased;
    transform-origin: 0% 0%;
    transform: translate(100%, 0);
    transition: transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1);
  }

  .menu li {
    padding: 10px 0;
    font-size: 22px;
    display: flex;
    justify-content: flex-end;
    padding-right: 50px;
  }

  .menuToggle .input-hidden:checked ~ ul {
    transform: scale(1, 1);
    opacity: 1;
  }
}

@media screen and (min-width: 787px) {
  .nav-bar ul {
    width: 730px;
    padding-left: 0;
  }
}

/* SUGGESTION BOX */

.suggestion-results {
  text-align: center;
}

.suggestion-box {
  border: 1px solid #333333;
  width: 200px;
  height: 200px;
  overflow: scroll;
  margin: auto;
  margin-bottom: 2em;
  background-color: #f9f9f9;
}

.container {
  max-width: 400px;
  width: 100%;
  margin: 0 auto;
  position: relative;
}

.suggestion_box textarea,
.suggestion_box button[type="submit"] {
  font-family: "Zen Loop", cursive;
  font-size: 35px;
}

.suggestion_box {
  background: #f9f9f9;
  padding: 25px;
}

.suggestion_box h3 {
  display: block;
  font-size: 30px;
  font-weight: 400;
}

.suggestion_boxh4 {
  margin: 5px 0 15px;
  display: block;
  font-size: 13px;
}

.suggestion_box h5 {
  margin: 5px 0 15px;
  display: block;
  font-size: 10px;
}

.suggestion_box textarea {
  width: 90%;
  border: 1px solid #ccc;
  background: #fff;
  margin: 0 0 5px;
  padding: 10px;
}

.suggestion_box textarea:hover {
  -webkit-transition: border-color 0.3s ease-in-out;
  -moz-transition: border-color 0.3s ease-in-out;
  transition: border-color 0.3s ease-in-out;
  border: 1px solid #aaa;
}

.suggestion_box button[type="submit"] {
  cursor: pointer;
  font-family: "Nunito";
  width: 25%;
  border: none;
  margin: 0 0 5px;
  padding: 10px;
  font-size: 15px;
}

.suggestion_box button[type="submit"]:hover {
  -webkit-transition: background 0.3s ease-in-out;
  -moz-transition: background 0.3s ease-in-out;
  transition: background-color 0.3s ease-in-out;
}

.suggestion_box button[type="submit"]:active {
  box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.5);
}

.suggestion_box input:focus,
.suggestion_box textarea:focus {
  outline: 0;
  border: 1px solid #999;
}
::-webkit-input-placeholder {
  color: #888;
}
:-moz-placeholder {
  color: #888;
}
::-moz-placeholder {
  color: #888;
}
:-ms-input-placeholder {
  color: #888;
}

